--- a/Stock/Views/Shared/_ManageAccount.cshtml
+++ b/Stock/Views/Shared/_ManageAccount.cshtml
@@ -2,7 +2,7 @@
 {
     <ul class="nav navbar-nav navbar-right">
         <li>
-            <a>Logged in as +@User.Identity.Name</a>
+            <a>Logged in as @User.Identity.Name</a>
         </li>
         <li>
             <a href="/Account/Details/Aqualorn">
