--- a/Stock/Views/Shared/_Layout.cshtml
+++ b/Stock/Views/Shared/_Layout.cshtml
@@ -36,6 +36,8 @@
     <script src="~/Scripts/jquery.signalR-2.2.0.min.js"></script>
     <script src="~/signalr/hubs"></script>
     <script src="~/Scripts/Stock/StartConnectionToStockHub.js"></script>
+    <script src="~/Scripts/Stock/RenderStockPrices.js"></script>
+    <script src="~/Scripts/Stock/RenderWallet.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
