- Buying shares implemented - Redesigned OwnedSharesViewModel class - Scripts for rendering and updating information updated

--- a/Stock/Views/Shared/_Layout.cshtml
+++ b/Stock/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
     <script src="~/Scripts/Stock/StartConnectionToStockHub.js"></script>
     <script src="~/Scripts/Stock/RenderStockPrices.js"></script>
     <script src="~/Scripts/Stock/RenderWallet.js"></script>
+    <script src="~/Scripts/Stock/UpdateStockPrices.js"></script>
+    <script src="~/Scripts/Stock/BuyShares.js"></script>
+    <script src="~/Scripts/Stock/UpdateWalletValues.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
