--- a/Stock/Views/Shared/_Layout.cshtml
+++ b/Stock/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/Scripts/Chart.min.js"></script>
     <script src="~/Scripts/jquery.signalR-2.2.0.min.js"></script>
     <script src="~/signalr/hubs"></script>
     <script src="~/Scripts/Stock/StartConnectionToStockHub.js"></script>
@@ -41,6 +42,8 @@
     <script src="~/Scripts/Stock/UpdateStockPrices.js"></script>
     <script src="~/Scripts/Stock/BuyShares.js"></script>
     <script src="~/Scripts/Stock/UpdateWalletValues.js"></script>
+    <script src="~/Scripts/Stock/ShowChart.js"></script>
+    <script src="~/Scripts/Stock/UpdateChart.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
