--- a/Stock/Views/Shared/_ManageAccount.cshtml
+++ b/Stock/Views/Shared/_ManageAccount.cshtml
@@ -4,18 +4,25 @@
         <li>
             <a>Logged in as @User.Identity.Name</a>
         </li>
-        <li>
-            <a href="/Account/Details/Aqualorn">
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <span class="glyphicon glyphicon-cog"></span>
             </a>
+            <ul class="dropdown-menu">
+                <li><a href="/Account/EditAccountName">Edit account name</a></li>
+                <li><a href="/Account/EditAccountPassword">Edit password</a></li>
+                <li><a href="/Account/EditAccountWallet">Edit wallet</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#" id="showHideChart">Show/Hide Chart</a></li>
+            </ul>
         </li>
+
         <li>
             <a href="/Account/Logout">
                <span class="glyphicon glyphicon-off"></span>
             </a>
         </li>
-    </ul>
-    
+    </ul> 
 }
 else
 {
