--- a/Stock/Views/Shared/_Layout.cshtml
+++ b/Stock/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div id="alertDiv" class="col-lg-12" style="text-align:center"></div>
+    </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
@@ -44,6 +47,7 @@
     <script src="~/Scripts/Stock/UpdateWalletValues.js"></script>
     <script src="~/Scripts/Stock/ShowChart.js"></script>
     <script src="~/Scripts/Stock/UpdateChart.js"></script>
+    <script src="~/Scripts/Stock/ConnectionProblem.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
