--- a/Stock/Views/Account/EditAccountName.cshtml
+++ b/Stock/Views/Account/EditAccountName.cshtml
@@ -4,14 +4,13 @@
     ViewBag.Title = "EditAccountName";
 }
 
-<h2>EditAccountName</h2>
+<h2>Edit Account Name</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>EditAccountNameViewModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -31,13 +30,12 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+                <div class="col-md-offset-2 col-md-1">
+                    <input type="submit" value="Confirm" class="btn btn-default" />
+                </div>
+                <div class="col-md-1">
+                    <a href="/Stock/Index" type="button" class="btn btn-default">Back to Stock</a>
+                </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
