--- a/Stock/Views/Account/EditAccountWallet.cshtml
+++ b/Stock/Views/Account/EditAccountWallet.cshtml
@@ -38,8 +38,11 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Add/Subtract Money" class="btn btn-default" />
+            <div class="col-md-offset-2 col-md-1">
+                <input type="submit" value="Confirm" class="btn btn-default" />
+            </div>
+            <div class="col-md-1">
+                <a href="/Stock/Index" type="button" class="btn btn-default">Back to Stock</a>
             </div>
         </div>
     </div>
