--- a/Stock/Views/Shared/_Layout.cshtml
+++ b/Stock/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/bootstrap")
     <script src="~/Scripts/Chart.min.js"></script>
     <script src="~/Scripts/jquery.signalR-2.2.0.min.js"></script>
